// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostar el componente con la imagen personalizada 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <h1>
    0
  </h1>
</div>
`;

exports[`ProductImage debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card Testing
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
